# acp_server

./: acp_client.py  client.py  pyproject.toml  router.py  server.py  server_smolagent.py
data/: professors.json
mcp_servers/: teachers_mcp_server.py
